update JBoss Tools installation scripts using mbenson's PR, plus some additional fixes; update examples and shell scripts; rename README.txt to README.html so it appears directly in the folder on dl.jb.org; create JBDS install script